# mmyolo

./: .gitignore
configs/custom_dataset/: rtmdet_tiny_syncbn_fast_8xb32-300e_coco.py  rtmdet_tiny_syncbn_fast_mobilenetv2_10xb128-100e_coco.py  rtmdet_tiny_syncbn_fast_mobilenetv2_10xb128-100e_coco_prob.py  rtmdet_tiny_syncbn_fast_mobilenetv2_10xb128-100e_coco_prob_not-ratio.py  yolov5_s-v61_syncbn_fast_1xb32-100e_cat.py
configs/rtmdet/: rtmdet_l_syncbn_fast_8xb32-300e_coco.py  rtmdet_s_syncbn_fast_8xb32-300e_coco.py  rtmdet_tiny_syncbn_fast_8xb32-300e_coco.py  rtmdet_x_syncbn_fast_8xb32-300e_coco.py
configs/yolox/: yolox_tiny_8xb8-300e_coco.py
demo/: image_demo.py  video_demo.py  video_demo.sh
mmyolo/datasets/: utils.py
mmyolo/utils/: labelme_utils.py
projects/easydeploy/model/: model.py
projects/easydeploy/ncnn/: CMakeLists.txt  mmyolo_rtmdet.cpp
projects/easydeploy/tools/: export.py  export.sh  image-demo.sh
tools/: dist_train.sh  train.py
tools/analysis_tools/: browse_coco_json.py  browse_dataset.py  dataset_analysis.py  get_flops.py  vis_scheduler.py
tools/dataset_converters/: labelme2coco.py  video2images.py  voc2yolo.py
tools/model_converters/: publish_model.py
